- added variable doing_abort to work around the "abort in abort" BUG00003

0045
- changed PrintIText() to Move(),Text()
- activated global gadgets for show_message()
- imported code from AROS/workbench/utilities/More/more.c to display
  scrollable texts in a new window (used for help windows).

0046
- added misc.h with function prototypes of misc.c
- added function collatestrings() to misc.c which collates lines of strings
- added gui.h as API description for future GUIs
- scaled size of mxgadgets

0047
- added gui for request_string(), lacks gui for help text
- moved help texts to texts.h
- added gui for request_number() (clone from request_string())
- added macros ExecuteCommand() and ExecuteNextCommand() in execute.c
- new mmakefile.src by Iain Templeton (iaint@aros.org) for the
  New Build Process

0048
- execute destructors of some gui-functions and call abort_install()
  with pointer to this destructor (or NULL if not needed)
- small changes to request_number (integer gadget)
- implemented "rename"
- added a GUI function user_confirm(char *) to ask user to proceed or skip
- added some more preset variables/help texts

0049
- use (preset) @askstring variable instead of fixed ASKSTRING_HELP,
  same for asknumber and askchoice
- partially implemented (delete). Need to implement (optional) and (delopts)
- gui for (askchoice)

0050
- fixed crash of askchoice gui

0051
- implemented a basic (makedir), no (infos) support.
- moved version string from main.c to version.h
- implemented a basic (execute)

0052
- implemented (fileonly) and (pathonly)
- suppressed warnings by adding casts to (IPTR) and setting initial values
  for variables
- implemented (earlier)
- implemented (getdiskspace)

0053
- use StrDup() instead of strdup()
  malloc(), calloc(), free() -> AllocVec(), FreeVec()
  implemented ReAllocVec() as a replacement for realloc() in
  AROS/compiler/alib

0054
- implemented (getenv)
- Updated Copyright string to 2003
- IconBase is now opened automatically
