@@ -1,0 +1,9 @@
+TYPE = PROJECT
+DEFAULTTOOL = SYS:Utilities/Installer
+TOOLTYPE = LOGFILE=RAM:Installer-log
+TOOLTYPE = SCRIPT=SYS:Utilities/test.script
+TOOLTYPE = MINUSER=AVERAGE
+TOOLTYPE = DEFUSER=EXPERT
+TOOLTYPE = APPNAME=TheWonderfulDemoApp
+TOOLTYPE = PRETEND=FALSE
+TOOLTYPE = LOG=TRUE
